<resources>
    <string name="app_name">LocTDOA</string>
    <string name="rec_btn_text">REC</string>
    <string name="play_btn_text">PLAY</string>
    <string name="recording_off_text">REC OFF</string>
    <string name="recording_on_text">REC ON</string>
    <string name="playing_off_text">PLAY OFF</string>
    <string name="playing_on_text">PLAY ON</string>
    <string name="pitch_level">PITCH LEVEL :</string>
    <string name="l_detected_time">DET TIME</string>
    <string name="l_detected_freq">DET FREQ</string>
    <string name="l_detected_corr_val">CORR VAL</string>
    <string name="connect_peer_button">CONNECT</string>
    <string name="disconnect_peer_button">DISCONNECT</string>
    <string name="get_data_button">SEND</string>
    <string name="label_peers">PEERS</string>S
    <string name="label_me">MY DEVICE</string>
    <string name="empty"></string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="client_text">This device will act as a client.</string>
    <string name="empty_message">No devices found.</string>
    <string name="p2p_off_warning">Enable P2P.</string>
    <string name="group_owner_text">"GROUP OWNER : "</string>
    <string name="enable_p2p_button">SET P2P</string>
    <string name="discover_peers_button">DISCOVER</string>
    <string name="device_txt">DEVICE</string>
    <string name="smplRate_txt">SAMPLING RATE</string>
    <string name="signal_time_txt">SIGNAL TIME</string>
    <string name="signal_select_txt">SIGNAL</string>
    <string name="start_btn_txt">START</string>
    <string name="X_txt">X</string>
    <string name="Y_txt">Y</string>
    <string name="Z_txt">Z</string>
    <string name="X_pos_txt">1.02</string>
    <string name="Y_pos_txt">1.11</string>
    <string name="Z_pos_txt">1.97</string>
    <string name="time_between_txt">TIME BETWEEN</string>

    <string-array name="device_spinner_content">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>T</item>
    </string-array>

    <string-array name="smpl_rate_spinner_content">
        <item>22050</item>
        <item>44100</item>
    </string-array>

    <string-array name="signal_time_spinner_content">
        <item>25ms</item>
        <item>50ms</item>
    </string-array>

    <string-array name="signal_select_spinner_content">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="time_between_spinner_content">
        <item>1000</item>
        <item>500</item>
        <item>2000</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>







</resources>
