<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context="com.example.keczaps.dsptest.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher_tdoa1_logo"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="130sp"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="A"
            android:id="@+id/label_txt_v"/>

    </LinearLayout>

    <GridLayout
        android:id="@+id/Spinners_setup_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/device_txt_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/device_txt" />

        <Spinner
            android:id="@+id/device_selection_spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:entries="@array/device_spinner_content"/>

        <TextView
            android:id="@+id/smpl_rate_txt_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/smplRate_txt" />

        <Spinner
            android:id="@+id/sampling_rate_selection_spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:entries="@array/smpl_rate_spinner_content"/>


        <TextView
            android:id="@+id/signal_time_txt_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/signal_time_txt" />

        <Spinner
            android:id="@+id/signal_time_spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:entries="@array/signal_time_spinner_content"/>

        <TextView
            android:id="@+id/signal_select_txt_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/signal_select_txt" />

        <Spinner
            android:id="@+id/signal_select_spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:entries="@array/signal_select_spinner_content"/>

        <TextView
            android:id="@+id/time_between_txt_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/time_between_txt" />

        <Spinner
            android:id="@+id/time_between_spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:entries="@array/time_between_spinner_content"/>

    </GridLayout>


    <GridLayout
        android:id="@+id/posXYZ_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/x_txt_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/X_txt" />

        <TextView
            android:id="@+id/y_txt_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/Y_txt" />

        <TextView
            android:id="@+id/z_txt_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/Z_txt" />

        <EditText
            android:id="@+id/x_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/X_pos_txt"
            android:inputType="number"/>

        <EditText
            android:id="@+id/y_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/Y_pos_txt"
            android:inputType="number"/>

        <EditText
            android:id="@+id/z_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/Z_pos_txt"
            android:inputType="number"/>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/start_btn_txt"
            android:id="@+id/start_btn"/>

    </LinearLayout>


</LinearLayout>
